# llm-workbench

./: .gitignore  LICENSE  README.md  contextualized_assistant.model  db.json  makefile  package-lock.json  package.json  pyproject.toml  sample.env
doc/: app_flow.drawio
src/: config.py  main.py
src/core/: generator.py  indexer.py  operator.py  prompt.py
src/core/prompting/: base.py  executor.py  history.py  indexer.py  prompt.py
src/core/prompting/generator/: context.py  echo.py  endpoint.py  model.py  ollama.py  openrouter.py  rag.py  selector.py  template.py
src/core/prompting/provider/: ollama.py  openrouter.py
src/llm/: indexer.py  operator.py
src/ui/component/: base.py  chat.py  context.py  icon.py  replay.py
tests/core/: test_generator.py  test_operator.py  test_prompt.py  text_history.py
tests/core/generator/: test_prompt_type.py
tests/core/prompt/: conftest.py  test_history.py  test_prompt.py  test_replace_response.py  test_replacer.py
tests/core/prompting/: conftest.py  test_history.py  test_prompt.py  test_prompt_executor.py  test_replacer.py
tests/core/prompting/generator/: test_selector.py
tests/llm/: test_operator.py
