[project]
name = "llm-workbench"
version = "0.1.0"
authors = [{ name = "André 'Intentor' Martins" }]
description = "A RAG-enabled workbench to index files and chat with an core."
keywords = ["ai", "rag", "llm", "chat"]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.12"]
dependencies = [
    "streamlit",
    "ollama",
    "chromadb",
    "llama-index",
    "docx2txt",
    "openpyxl",
    "jinja2",
    "jinja2-iso8601",
]

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]
